--- a/README.Rmd
+++ b/README.Rmd
@@ -30,6 +30,7 @@ knitr::opts_chunk$set(
 
 The goal of oddstream (Outlier Detection in Data Streams) is to propose a framework that provides real time support for early detection of anomalous series within a large collection of streaming time series data. By definition, anomalies are rare in comparison to a system's typical behaviour. We define an anomaly as an observation that  is very unlikely given the forecast distribution. The algorithm first forecasts a boundary for the system's typical behaviour using a representative sample of the typical behaviour of the system. An  approach based on extreme value theory is used for this boundary prediction process. Then a sliding window is used to test for anomalous series within the newly arrived collection of series. Feature based representation of time series is used as the input to the model. To cope with concept drift, the forecast boundary for the system's typical behaviour is updated periodically.
 
+This package is still under development and this repository contains a development version of the R package *oddstream*.
 
 ## Installation
 
@@ -43,11 +44,11 @@ devtools::install_github("pridiltal/oddstream")
 ## Example
 
 
-```{r example}
+```{r example, cache=TRUE}
 library(oddstream)
 # Considers the first window  of the data set as the training set and the remaining as the test stream
 train_data <- anomalous_stream[1:100,]
 test_stream <-anomalous_stream[101:1456,]
-find_odd_streams(train_data, test_stream , plot_type = "out_location_plot", trials = 100)
 
+find_odd_streams(train_data, test_stream , plot_type = "out_location_plot", trials = 100)
 ```
