--- a/README.Rmd
+++ b/README.Rmd
@@ -2,6 +2,8 @@
 output: github_document
 ---
 
+#oddstream <img src="logo.png" align="right" height="150" />
+
 [![Project Status: WIP ? Initial development is in progress, but there has not yet been a stable, usable release suitable for the public.](http://www.repostatus.org/badges/latest/wip.svg)](http://www.repostatus.org/#wip)
 [![Licence](https://img.shields.io/badge/licence-GPL--2-blue.svg)](https://www.gnu.org/licenses/old-licenses/gpl-2.0.html)
 [![Build Status](https://travis-ci.org/pridiltal/oddstream.svg?branch=master)](https://travis-ci.org/pridiltal/oddstream)
@@ -52,3 +54,10 @@ test_stream <-anomalous_stream[101:1456,]
 
 find_odd_streams(train_data, test_stream , plot_type = "out_location_plot", trials = 100)
 ```
+
+
+## References
+
+- Clifton, D. A., Hugueny, S., & Tarassenko, L. (2011). Novelty detection with multivariate extreme value statistics. Journal of signal processing systems, 65 (3), (pp. 371-389).
+
+- Hyndman, R. J., Wang, E., & Laptev, N. (2015). Large-scale unusual time series detection. In 2015 IEEE International Conference on Data Mining Workshop (ICDMW), (pp. 1616-1619). IEEE.
