--- a/README.Rmd
+++ b/README.Rmd
@@ -45,7 +45,7 @@ devtools::install_github("pridiltal/oddstream")
 
 ## Example
 
-### Dataset
+### Multivariate time series plot of `anomalous_stream` dataset  available in `oddstream` package 
 
 ```{r dataset, echo=FALSE, eval=TRUE, warning=FALSE, message=FALSE}
 library(oddstream)
