--- a/README.Rmd
+++ b/README.Rmd
@@ -1,24 +1,26 @@
 ---
 output: github_document
 ---
-
+#oddstream <img src="logo.png" align="right" height="150" />
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
-```{r setup, include = FALSE}
+```{r, echo = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
-  fig.path = "man/figures/README-",
-  out.width = "100%"
+  fig.path = "README-"
 )
 ```
+
 # oddstream
 
-The goal of oddstream is to ...
+The goal of oddstream (Outlier Detection in Data Streams) is to propose a framework that provides real time support for early detection of anomalous series within a large collection of streaming time series data. By definition, anomalies are rare in comparison to a system's typical behaviour. We define an anomaly as an observation that  is very unlikely given the forecast distribution. The algorithm first forecasts a boundary for the system's typical behaviour using a representative sample of the typical behaviour of the system. An  approach based on extreme value theory is used for this boundary prediction process. Then a sliding window is used to test for anomalous series within the newly arrived collection of series. Feature based representation of time series is used as the input to the model. To cope with concept drift, the forecast boundary for the system's typical behaviour is updated periodically.
+
+This package is still under development and this repository contains a development version of the R package *oddstream*.
 
 ## Installation
 
-You can install oddstream from GitHub with:
+You can install oddstream from github with:
 
 ```{r gh-installation, eval = FALSE}
 # install.packages("devtools")
@@ -27,24 +29,47 @@ devtools::install_github("pridiltal/oddstream")
 
 ## Example
 
-This is a basic example which shows you how to solve a common problem:
+### Multivariate time series plot of `anomalous_stream` dataset  available in `oddstream` package 
+
+```{r dataset, echo=FALSE, eval=TRUE, warning=FALSE, message=FALSE}
+library(oddstream)
+library(tidyverse)
+t <- nrow(anomalous_stream)
+f <- ncol(anomalous_stream)
+g <- as_tibble(anomalous_stream) %>% gather() %>%
+  mutate(key= rep((1:f), each = t)) %>%
+  mutate(Time = rep(1:t, f))
+colnames(g) <- c("Cable", "Value", "Time")
+#g <- g%>% mutate(Value = log(Value))
+
+p1 <- ggplot(g, aes(x = Time, y = Cable, fill = Value)) + 
+  geom_tile() +
+   scale_fill_gradientn(colours = c("lightblue", "red1", "red2"), values = c(0,.1,max(anomalous_stream)))+
+  xlab("Time ") + 
+  scale_x_continuous(breaks = seq(0,1400, 200))+
+  scale_y_continuous(breaks = seq(0,600, 100))+
+  ylab("Time Series ID") 
+  #theme(aspect.ratio = 1)
+
+p1
+```
 
 ```{r example}
-## basic example code
+library(oddstream)
+# Considers the first window  of the data set as the training set and the remaining as the test stream
+train_data <- anomalous_stream[1:100,]
+test_stream <-anomalous_stream[101:1456,]
+
+output <- find_odd_streams(train_data, test_stream , plot_type = "out_location_plot", trials = 100)
 ```
 
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
-
-```{r cars}
-summary(cars)
+### Further Details
+```{r help, echo = TRUE, eval= FALSE}
+?oddstream
 ```
 
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date.
+## References
 
-You can also embed plots, for example:
+- Clifton, D. A., Hugueny, S., & Tarassenko, L. (2011). Novelty detection with multivariate extreme value statistics. Journal of signal processing systems, 65 (3), (pp. 371-389).
 
-```{r pressure, echo = FALSE}
-plot(pressure)
-```
-
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub!
+- Hyndman, R. J., Wang, E., & Laptev, N. (2015). Large-scale unusual time series detection. In 2015 IEEE International Conference on Data Mining Workshop (ICDMW), (pp. 1616-1619). IEEE.
