added travis badge

--- a/README.Rmd
+++ b/README.Rmd
@@ -4,6 +4,8 @@ output: github_document
 
 #oddstream <img src="logo.png" align="right" height="150" />
 
+[![Build Status](https://travis-ci.org/pridiltal/oddstream.svg?branch=master)](https://travis-ci.org/pridiltal/oddstream)
+
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
 ```{r, echo = FALSE}
