--- a/README.Rmd
+++ b/README.Rmd
@@ -1,8 +1,9 @@
 ---
 output: github_document
+title: oddstream
 ---
 
-#oddstream <img src="logo.png" align="right" height="150" />
+<img src="logo.png" align="right" height="150"/>
 
 
 [![Project Status: WIP – Initial development is in progress, but there has not yet been a stable, usable release suitable for the public.](http://www.repostatus.org/badges/latest/wip.svg)](http://www.repostatus.org/#wip)
@@ -91,3 +92,5 @@ output <- find_odd_streams(train_data, test_stream , plot_type = "out_location_p
 - Clifton, D. A., Hugueny, S., & Tarassenko, L. (2011). Novelty detection with multivariate extreme value statistics. Journal of signal processing systems, 65 (3), (pp. 371-389).
 
 - Hyndman, R. J., Wang, E., & Laptev, N. (2015). Large-scale unusual time series detection. In 2015 IEEE International Conference on Data Mining Workshop (ICDMW), (pp. 1616-1619). IEEE.
+
+- Talagala, P. D., Hyndman, R. J., Smith-Miles, K., Kandanaarachchi, S., & Muñoz, M. A. (2018). Anomaly Detection in Streaming Nonstationary Temporal Data. Working paper 4/18, Department of Econometrics & Business Statistics, Monash University.
